# SEGReader

./: CMakeLists.txt  README.md
include/: segy_reader.hpp
src/: CMakeLists.txt  segy_reader.cpp
tests/: CMakeLists.txt  test_textual_header.cpp
